// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordDefinition component -> full entry Matches snapshot 1`] = `
<article
  className="section"
>
  <header>
    <h1
      lang="non-swe"
    >
      Afköra
    </h1>
    <small
      className="subHeading"
    >
      Old Swedish Dictionary - 
      afköra
    </small>
    <p>
      Meaning of Old Swedish word 
      <em>
        "
        afköra
        "
      </em>
       (or 
      <em>
        afkøra
      </em>
      )
       in Swedish.
    </p>
    <p>
      As defined by K.F Söderwall's dictionary of Medieval Swedish:
    </p>
  </header>
  <dl
    className="definitionList"
  >
    <dt>
      <strong>
        afköra
      </strong>
       
      (
      afkøra
      )
    </dt>
    <dd
      dangerouslySetInnerHTML={
        {
          "__html": " , vräka. hafwi wald han afköra  <abbr title="Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.">GS</abbr> 43 (1416?). af ty ahren (för areno) han landboen afkörer ib.",
        }
      }
      lang="swe"
    />
  </dl>
  <p>
    <strong>
      Orthography:
    </strong>
     Early Old Swedish used different letters for ä and ö, so 
    <em>
      afköra
    </em>
     may have also been written as 
    <em>
      afkøra
    </em>
  </p>
  <p>
    <strong>
      Part of speech:
    </strong>
     
    <em>
      vb
    </em>
  </p>
  <p>
    <strong>
      Grammatical aspect:
    </strong>
     
    <em>
      v.
    </em>
  </p>
  <strong>
    Alternative forms or notes:
  </strong>
  <ul
    className="list"
  >
    <li>
      -bortdrifva
    </li>
  </ul>
  <p>
    Possible runic inscription in 
    <em>
      Medieval Futhork
    </em>
    :
    <span
      className="rune"
    >
      ᛆᚠᚴᚯᚱᛆ
    </span>
    <br />
    <small>
      Medieval Runes were used in Sweden from 12th to 17th centuries.
    </small>
  </p>
  <div
    className="abbreviations"
  >
    <div
      className="column"
    >
      <h4>
        Works and authors cited:
      </h4>
      <dl
        className="wrap"
      >
        <dt
          className="abbreviation"
        >
          <strong>
            GS
          </strong>
        </dt>
        <dd
          className="explanation"
        >
          Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.
        </dd>
      </dl>
    </div>
    <a
      className="link"
      href="/source-list"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      ➞ See all works cited in the dictionary
    </a>
  </div>
</article>
`;

exports[`WordDefinition component -> minimal entry Matches snapshot 1`] = `
<article
  className="section"
>
  <header>
    <h1
      lang="non-swe"
    >
      Afkora
    </h1>
    <small
      className="subHeading"
    >
      Old Swedish Dictionary - 
      afkora
    </small>
    <p>
      Meaning of Old Swedish word 
      <em>
        "
        afkora
        "
      </em>
       in Swedish.
    </p>
    <p>
      As defined by K.F Söderwall's dictionary of Medieval Swedish:
    </p>
  </header>
  <dl
    className="definitionList"
  >
    <dt>
      <strong>
        afkora
      </strong>
       
    </dt>
    <dd
      dangerouslySetInnerHTML={
        {
          "__html": " , vräka. hafwi wald han afköra  <abbr title="Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.">GS</abbr> 43 (1416?). af ty ahren (för areno) han landboen afkörer ib.",
        }
      }
      lang="swe"
    />
  </dl>
  <p>
    Possible runic inscription in 
    <em>
      Medieval Futhork
    </em>
    :
    <span
      className="rune"
    >
      ᛆᚠᚴᚮᚱᛆ
    </span>
    <br />
    <small>
      Medieval Runes were used in Sweden from 12th to 17th centuries.
    </small>
  </p>
  <div
    className="abbreviations"
  >
    <div
      className="column"
    >
      <h4>
        Works and authors cited:
      </h4>
      <dl
        className="wrap"
      >
        <dt
          className="abbreviation"
        >
          <strong>
            GS
          </strong>
        </dt>
        <dd
          className="explanation"
        >
          Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.
        </dd>
      </dl>
    </div>
    <a
      className="link"
      href="/source-list"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      ➞ See all works cited in the dictionary
    </a>
  </div>
</article>
`;
